updated the layout, prisma schema, and added google, email and credential sign in

--- a/.env
+++ b/.env
@@ -4,4 +4,27 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# need to add db vercel? supabase? 
+
 DATABASE_URL="postgresql://djkelmanson@localhost:5432/djkelmanson"
+
+NEXTAUTH_SECRET="7R3umQKC0dL+rIFtr/MwTOumEE+eLjw94STQjGHsWdk="
+NEXTAUTH_URL="http://localhost:3000"
+
+# OAuth
+GOOGLE_CLIENT_ID="241404997511-crc5k5d2qnjc1qces8shsj9jioh9egvn.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
+EMAIL_FROM="team@rivetertrade.com"
+
+# Sparkpost
+SMTP_USER="SMTP_Injection"
+SMTP_PASSWORD="534c612d92f76991368cbae655dc3d68995ab386"
+SMTP_HOST="smtp.sparkpostmail.com"
+SMTP_PORT="587"
+
+# Gmail
+EMAIL_SERVER_HOST="smtp.gmail.com"
+EMAIL_SERVER_PORT=465
+EMAIL_SERVER_USER="dkelmanson@gmail.com"
+EMAIL_SERVER_PASSWORD="mjodmfmbbxrvxbne" # "mjod mfmb bxrv xbne"
