--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.17",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.7.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
-    "prisma": "^5.5.2",
+    "nodemailer": "^6.9.7",
+    "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5"
   },
