--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.17",
     "@prisma/client": "^5.7.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
