--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.14.17",
     "@prisma/client": "^5.7.0",
     "axios": "^1.6.2",
@@ -23,6 +24,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
